--- a/src/app.module.css
+++ b/src/app.module.css
@@ -2,6 +2,9 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 1200px;
+  padding: 0px 25px;
+  margin: 0 auto;
 }
 
 .wrapper {
@@ -12,4 +15,10 @@ main {
 .title {
   font-size: 42px;
   margin: 20px 0px;
+}
+
+@media screen and (max-width: 767px) {
+  .wrapper {
+    flex-direction: column;
+  }
 }
