--- a/src/components/sliderImg/sliderImg.module.css
+++ b/src/components/sliderImg/sliderImg.module.css
@@ -18,6 +18,7 @@
   transform: translateX(-50%);
   background-color: var(--color-bg);
   padding: 3px 5px;
+  white-space: nowrap;
 }
 
 .thumbs {
@@ -36,4 +37,11 @@
 .thumbImg:hover {
   border-color: var(--color-variant-hover-border);
   transition: all 0.3s ease;
+}
+
+@media screen and (max-width: 767px) {
+  .wrapper {
+    width: 100%;
+    margin-bottom: 15px;
+  }
 }
