--- a/src/components/sliderNav/sliderNav.module.css
+++ b/src/components/sliderNav/sliderNav.module.css
@@ -4,3 +4,10 @@
   margin-left: 10px;
   width: 40%;
 }
+
+@media screen and (max-width: 767px) {
+  .wrapper {
+    margin-left: 0;
+    width: 100%;
+  }
+}
